
===========================================================================
MARK: released gwenhywfar-0.9.5 (2004/01/21)
===========================================================================


2004/01/21: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- applied a build patch submitted by Ronny Buchmann
- fixed a severe bug in signature code
- changed version string determination:
  if TAG is "cvs" then the full version string (including major, minor,
  patchlevel, build and tag) are used.
  Otherwise all traling "0" in a version number are removed.


2004/01/18 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed windoze macros
- worked on SSL code
- MsgEngine: 
  - added a getCharValue callback to retrieve <VALUE>s with leading '?'
  - added checkType callback which lets inheritors return the base type
    instead of assuming "char".


2004/01/17 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added GWEN_WaitCallback:
  This allows for nesting callback contexts. This is now a generic way
  to inform the application about long term actions.
- started working on SSL connections (needed for OpenHBCI in PIN/TAN mode)
  Note: An abstraction is not that badly needed, but it would help when
        porting to a platform which does not use OpenSSL for this purpose.
        Well, my thoughts about porting Gwen to PalmOS (which has its own
        SSL functions) is not completely dead as you can see ;-)
        Anyway, the functions here will make it easier at least for me to
        use SSL without the need of digging into the OpenSSL docs everytime,
        so here it comes...
- added conveniance functions for socket operations (needed for SSL functions)


2004/01/15 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- DB: 
    - added "nodeflags" (intended to be used for flagging "dirty" nodes etc)